data/derived/comb/progs/unify/prog7532.ml.out
Characters 98-99:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> int) list -> 'a -> int
       but an expression was expected of type
         ('a -> int) list -> 'a -> ('a -> int) list
       Type int is not compatible with type ('a -> int) list 
